k8s/asgard/apps/immich/namespace.yaml
# k8s/asgard/apps/immich/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: immich
